--- a/config/system_monitor.yaml
+++ b/config/system_monitor.yaml
@@ -6,6 +6,7 @@ cpu_monitor:
   cpu_load5_warn: 0.8
   cpu_temp_warn: 85.0
   cpu_temp_error: 90.0
+  num_cores: 8
 hdd_monitor:
   no_hdd_temp: true
   no_hdd_temp_warn: false
@@ -18,7 +19,7 @@ mem_monitor:
   mem_level_error: 0.99
 ntp_monitor:
   reference_host: ntp.ubuntu.com
-  offset_tolerance: 500.0
+  offset_tolerance: 1500.0
   error_offset_tolerance: 5000000.0
 net_monitor:
   net_level_warn: 0.95
